# rust-vr-app

./: .gitignore  Cargo.toml  build.rs  build_apk.sh
.cargo/: config.toml
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/vrapp/core/: GamepadOverlay.java  GeckoViewManager.java  MainActivity.java
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
android/app/src/main/res/values/: colors.xml  strings.xml
src/: gamepad.rs  input.rs  lib.rs  renderer.rs  sensors.rs  thumbs.rs  ui.rs  video.rs  video_ndk.rs  webview.rs  window_manager.rs
src/shaders/: distortion.wgsl  main.wgsl  ui_panel.wgsl
