[package]
name = "vr_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Android app framework
android-activity = { version = "0.6", features = ["native-activity"] }
# Android NDK sys bindings for sensors
ndk-sys = "0.6"
# Logging
log = "0.4"
android_logger = "0.14"
lazy_static = "1.4"
# 3D rendering

# Window/event handling
winit = { version = "0.30", default-features = false, features = ["android-native-activity", "rwh_06"] }
# Raw window handle for surface creation
raw-window-handle = "0.6"
# Gamepad input (PS5 controller)
gilrs = "0.11"
# Math for 3D
glam = "0.29"
# Async runtime
pollster = "0.4"
# GPU buffer data
bytemuck = { version = "1.14", features = ["derive"] }
# UI
egui = "0.30"
egui-wgpu = "0.30"
egui-winit = { version = "0.30", default-features = false, features = ["links"] }
# JNI for Android Intent calls (File Picker)
jni = "0.21"
# GPU rendering with wgpu (Vulkan backend)
wgpu = { version = "24", features = ["vulkan-portability"] }
# Raw Vulkan access for AHardwareBuffer import
ash = "0.38"
# Android NDK (hardware_buffer is a module, not a feature)
ndk = "0.9"
# Dedicated hardware buffer wrappers
hardware-buffer = "0.1"
# libc for syscalls (fd close)
libc = "0.2"
# Note: mediacodec crate removed due to linker issues - will use ndk-sys directly later

